feat: add accept or decline collaboration invite
