# app/controllers/__init__.py
@@ -32,4 +32,4 @@ from .project_database import (ProjectDatabaseView, ProjectDatabaseDetailView, P
                                ProjectDatabaseRetrievePasswordView, ProjectDatabaseAdminRetrievePasswordView, DatabaseStatsView)
 from .billing_invoice import (BillingInvoiceView,BillingInvoiceNotificationView)
 from .system_status import SystemStatusView
-from .project_users import ProjectUsersView, ProjectUsersTransferView
+from .project_users import ProjectUsersView, ProjectUsersTransferView, ProjectUsersHandleInviteView
