# app/schemas/project_users.py
@@ -17,3 +17,4 @@ class ProjectUserSchema(Schema):
         ])
     project_id = fields.String()
     user = fields.Nested(UserRoleSchema, many=False, dump_only=True)
+    accepted_collaboration_invite = fields.Boolean()
